some more ideas

--- a/brainstorm.tex
+++ b/brainstorm.tex
@@ -56,7 +56,13 @@ Automate mathematics. Automating the creativity process of forming questions and
 \item fmri, mri brain stuff and its relations to language
 \item cool links: %https://mathoverflow.net/questions/285207/is-there-research-on-human-oriented-theorem-proving,
 %https://www.youtube.com/watch?v=OLxbIXwpMes&feature=youtu.be
-\item 
+\item how do we generate the data set? We can have UROPs generate the data set
+\item it would be nice to be able to automatically generate more questions...for the models to train...how to do this in a way that preserves what humans would ask?
+\item Brando thinks that probably its a good idea to focus on mathematical questions that are human like? Otherwise any arbitrary grammatically correct set of symbols of maths could be a question
+\item amazon mechanical turk? for very simple maths?
+\item scraping from the web?
+\item scraping from online resources? UROP could code a scraper for a specific book or something (careful with copy rights)
+\item for conjectures, collect all important conjectures every said?
 \end{enumerate}
 
 \section{execution ideas}
