--- a/brainstorm.tex
+++ b/brainstorm.tex
@@ -63,6 +63,8 @@ Automate mathematics. Automating the creativity process of forming questions and
 \item scraping from the web?
 \item scraping from online resources? UROP could code a scraper for a specific book or something (careful with copy rights)
 \item for conjectures, collect all important conjectures every said?
+\item for the conjecture thing, its nice cuz anything that is NOT in the set of conjectures, is a negative example, so we get lots of examples nearly for free
+\item the nice thing about GANs
 \end{enumerate}
 
 \section{execution ideas}
