--- a/brainstorm.tex
+++ b/brainstorm.tex
@@ -64,7 +64,9 @@ Automate mathematics. Automating the creativity process of forming questions and
 \item scraping from online resources? UROP could code a scraper for a specific book or something (careful with copy rights)
 \item for conjectures, collect all important conjectures every said?
 \item for the conjecture thing, its nice cuz anything that is NOT in the set of conjectures, is a negative example, so we get lots of examples nearly for free
-\item the nice thing about GANs
+\item the nice thing about GANs its they generate stuff
+\item reward function can be hard to define, but for maths solving its easy, if u solve the proble, success! (how do RL agents in games experience success)
+\item usually when I do maths, the way I learn the proof (of course even though of actively doing it), I sometimes go through the proof, identify the new meaningful step(s) in the proof and add it to my intuition set of the subject (I also like what sipser does, go through the proof and do a sketch proof, compression!)
 \end{enumerate}
 
 \section{execution ideas}
