--- a/brainstorm.tex
+++ b/brainstorm.tex
@@ -66,6 +66,7 @@ Automate mathematics. Automating the creativity process of forming questions and
 \item for the conjecture thing, its nice cuz anything that is NOT in the set of conjectures, is a negative example, so we get lots of examples nearly for free
 \item the nice thing about GANs its they generate stuff
 \item reward function can be hard to define, but for maths solving its easy, if u solve the proble, success! (how do RL agents in games experience success)
+\item note that the reward function for forming the questions does not seem as simple...what is the "correct answer"? When solving there is a clear success/reward!
 \item usually when I do maths, the way I learn the proof (of course even though of actively doing it), I sometimes go through the proof, identify the new meaningful step(s) in the proof and add it to my intuition set of the subject (I also like what sipser does, go through the proof and do a sketch proof, compression!)
 \end{enumerate}
 
