added why forming questions is hard

--- a/brainstorm.tex
+++ b/brainstorm.tex
@@ -69,6 +69,7 @@ Automate mathematics. Automating the creativity process of forming questions and
 \item note that the reward function for forming the questions does not seem as simple...what is the "correct answer"? When solving there is a clear success/reward!
 \item usually when I do maths, the way I learn the proof (of course even though of actively doing it), I sometimes go through the proof, identify the new meaningful step(s) in the proof and add it to my intuition set of the subject (I also like what sipser does, go through the proof and do a sketch proof, compression!)
 \item correct me if Im wrong, but traditional ATP don't LEARN mathematics nor form a model of INTUITION (e.g. static evluator that alpha go does)
+\item would meta-learning be useful? (Ilya's AGI talk), learn to learn...maybe there is a different way to learn new maths subjects?
 \end{enumerate}
 
 \section{execution ideas}
